Changelog for GEMC
==================

2/20/17
 - added mode 10 and 20 to FASTMC, enabling hit process routines

2/16/17
 - Added vacuumOpt material - vacuum with optical property. Addressing issue #64.

2/15/17
 - identifying missing hit process by volume name
 - for CAD models, if hitType is not specified, using sensitivity
 - added momemntum information for FASTMC mode (unsmeared)
 - for FASTMC mode 2, forcing recording of 0 edep particles
 - for FASTMC mode, do not digitize the info
 - for FASTMC mode, do not process RF
 - added FASTMC mode TXT and EVIO output: smeared and unsmeared quantities
 - Simple field integration for FASTMC mode. 
 - more precise evaluation of events processing time

2/14/17
 - added Scintillation in the process catalogue. Added verbosity condition to print not catalogue pro
 - large production threshold and max step for fastmc mode 1 AND 2.

2/9/17
 - added "mother" and "hitType" fields in cad.gxml

1/27/17
 - fixed mirror definition size dimensions checks for backward compatibility with 2.5

1/26/17
 - getting particleIterator with GetParticleIterator() (geant4 10.3)
 - removed unnecessary passing of run manager

1/19/17
 - FASTMCMODE option:

    - 0: No FASTMC (default).
    - 1: Disable secondaries (5m production cut) and set high (5m) max step in sensitive detectors
    - 2: Disable all physics but transportation.

12/13/16
 - Daniel Lersch, Michael Kunkel: added DC time to distance function

12/6/16
 - addded mirror sigmaAlpha in verbosity log

12/5/16
 - fixed clas12 ctof time offset
 - added Birk Constant properties in material factory
 - added reading mirrors Sigma Alpha. Fixed backward compatibility for materials.
 - adding property sigmaAlpha in optical surfaces

11/29/16
 - tdc was not cast correcly to int in DC hit process

11/23/16
 - all ftof panels assigned to the same hit process and bank

11/22/16
 - added magnetic field information in MHit. This will give access to it to all sensitive detector hit process routines.